# djangoHW27-master

./: db.sqlite3  manage.py  pyproject.toml
ads/: models.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py
data/: csv_to_json.py
djangoHW27/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
