[tool.poetry]
name = "djangohw27"
version = "0.1.0"
description = "home work 27 django"
authors = ["frame <frame.boo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
pillow = "^9.2.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
